@@ -1,5 +1,8 @@
 2002-08-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* lily/parse-scm.cc (protected_ly_parse_scm): compatibility with
+	CVS GUILE 
+
 	* input/test/preset-extent.ly (texidoc): added file.
 
 	* scripts/convert-ly.py: add extent rule.
